# novel-summarizer

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  main.py  pyproject.toml
configs/: default.yaml
configs/profiles/: fast.yaml  quality.yaml  speed.yaml  tiered.yaml  tiered_fast_short.yaml
dev_docs/: storyteller_step_execution.md  storyteller_tiering_execution.md
novel_summarizer/: __init__.py  cli.py
novel_summarizer/config/: __init__.py  loader.py  schema.py
novel_summarizer/domain/: __init__.py  hashing.py
novel_summarizer/embeddings/: README.md  __init__.py  service.py
novel_summarizer/export/: README.md  __init__.py  markdown.py
novel_summarizer/ingest/: __init__.py  parser.py  service.py  splitter.py
novel_summarizer/llm/: __init__.py  cache.py  embeddings.py  factory.py  prompts.py
novel_summarizer/storage/: __init__.py  base.py  db.py  models.py  repo.py  types.py  vectordb.py
scripts/: __init__.py  epub_to_markdown.py
tests/: test_cli_parser.py  test_config.py  test_embeddings_service_hybrid.py  test_epub_to_markdown.py  test_export_markdown.py  test_hashing.py  test_ingest_parser.py  test_llm_embeddings.py  test_llm_factory_logging.py  test_narration_outputs.py  test_narrations_latest.py  test_splitter.py  test_storyteller_consistency.py  test_storyteller_evidence_verify.py  test_storyteller_generate_step.py  test_storyteller_narration_prompt.py  test_storyteller_nodes.py  test_storyteller_refine.py  test_storyteller_step_utils.py  test_storyteller_tiering.py  test_world_state_checkpoints.py
(+51 files in other folders)
